--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularRouting</title>
+  <title>Sudha Portfolio</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -19,9 +19,9 @@
 {
   body,html,.container-fuild{
     height:50vh !important;
-    
+
 }
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
   select:focus,
   textarea:focus,
   input:focus {
@@ -32,7 +32,7 @@
 }
 </style>
 </head>
-<body> 
+<body>
 <app-root></app-root>
 
 </body>
